--- a/MobileProject/package.json
+++ b/MobileProject/package.json
@@ -11,16 +11,22 @@
   "dependencies": {
     "@expo-google-fonts/lexend-exa": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "@types/react-native": "^0.71.5",
     "expo": "~48.0.10",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^11.1.1",
     "expo-splash-screen": "^0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.0.34"
   },
   "private": true
 }
