--- a/MobileProject/package.json
+++ b/MobileProject/package.json
@@ -22,7 +22,8 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "vector-icons": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
