--- a/MobileProject/package.json
+++ b/MobileProject/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/lexend-exa": "^0.2.3",
+    "@muhzi/react-native-user-avatar": "^1.0.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
