--- a/MobileProject/package.json
+++ b/MobileProject/package.json
@@ -21,6 +21,7 @@
     "expo-font": "^11.1.1",
     "expo-splash-screen": "^0.18.1",
     "expo-status-bar": "~1.4.4",
+    "randomcolor": "^0.6.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
