--- a/MobileProject/package.json
+++ b/MobileProject/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/lexend-exa": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@muhzi/react-native-user-avatar": "^1.0.7",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -22,10 +23,14 @@
     "expo-font": "^11.1.1",
     "expo-splash-screen": "^0.18.1",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-calendar-picker": "^7.1.4",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-global-props": "^1.1.5",
+    "react-native-modal-datetime-picker": "^15.0.0",
     "react-native-reanimated": "~2.14.4",
     "react-navigation": "^4.4.4"
   },
