--- a/MobileProject/package.json
+++ b/MobileProject/package.json
@@ -24,7 +24,9 @@
     "randomcolor": "^0.6.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-modal-datetime-picker": "^15.0.0",
     "react-navigation": "^4.4.4",
     "vector-icons": "^0.1.0"
   },
