--- a/MobileProject/package.json
+++ b/MobileProject/package.json
@@ -27,6 +27,7 @@
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-modal-datetime-picker": "^15.0.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-navigation": "^4.4.4",
     "vector-icons": "^0.1.0"
   },
