--- a/MobileProject/package.json
+++ b/MobileProject/package.json
@@ -19,14 +19,17 @@
     "expo": "~48.0.10",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^11.1.1",
-    "expo-splash-screen": "^0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "randomcolor": "^0.6.2",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-modal-datetime-picker": "^15.0.0",
     "react-navigation": "^4.4.4",
-    "vector-icons": "^0.1.0"
+    "vector-icons": "^0.1.0",
+    "@types/react": "~18.0.27"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
